refactor: do not group messages